--- a/src/App.less
+++ b/src/App.less
@@ -3,6 +3,7 @@
 .App {
   max-width: @pixel-size * 60;
   margin: @pixel-size * 0 auto;
+  height: 100%;
 
   .header {
     display: flex;
@@ -18,9 +19,12 @@
     }
   }
 
-  .footer {
-    margin: @pixel-size * 3 @pixel-size * 0;
-    font-weight: bold;
-    text-align: center;
+  .touch-area {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 3;
   }
 }
