--- a/src/styles/core.less
+++ b/src/styles/core.less
@@ -1,7 +1,7 @@
 @import "variables.less";
 
 html {
-  height: 100%
+  height: 100%;
 }
 
 body {
@@ -33,4 +33,6 @@ a {
 
 div#root {
   height: 100%;
+  display: table;
+  margin: auto;
 }
