--- a/src/App.less
+++ b/src/App.less
@@ -18,6 +18,7 @@
       float: right;
       max-width: fit-content;
       margin: @pixel-size * 3.25 0 auto auto;
+      margin-left: 5px;
       z-index: 4;
     }
 
