Utilize disabled while moving

--- a/src/components/Button/button.less
+++ b/src/components/Button/button.less
@@ -9,3 +9,15 @@
   font-weight: bold;
   color: #f9f6f2;
 }
+
+.button:disabled,
+.button[disabled]{
+  background: #8f7a66;
+  border: @pixel-size solid #cccccc;
+  border-radius: @pixel-size * 0.5;
+  font-size: @pixel-size * 2;
+  line-height: @pixel-size * 3;
+  font-weight: bold;
+  background-color: #cccccc;
+  color: #777777;
+}
